--- a/Tabloid/appsettings.json
+++ b/Tabloid/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "AllowedHosts": "*",
+  "FirebaseProjectId": null,
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost\\SQLExpress;database=Tabloid;integrated security=true"
   }
